--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="assets/script.js" defer></script>
 </head>
 <body>
-
+    <div class="math">
+        Style
+    </div>
 </body>
 </html>
